src/objects/Apttus_Config2__CustomerPOIssueLog__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__ContextField__c</fullName>
        <description>The API name of the field from purchase order header or the purchase order item for which the issue is logged</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The API name of the field from purchase order header or the purchase order item for which the issue is logged</inlineHelpText>
        <label>Context Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IssueDetails2__c</fullName>
        <description>The details of the issue</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The details of the issue</inlineHelpText>
        <label>Issue Details</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IssueDetails__c</fullName>
        <description>The details of the issue</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The details of the issue</inlineHelpText>
        <label>Issue Details (Deprecated)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ResolutionDate__c</fullName>
        <description>The DateTime when the issue was resolved</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The DateTime when the issue was resolved</inlineHelpText>
        <label>Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Resolution__c</fullName>
        <description>Holds information about the final resolution of the issue</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Holds information about the final resolution of the issue</inlineHelpText>
        <label>Resolution</label>
        <type>TextArea</type>
    </fields>
</CustomObject>